Fixed scrollbar issue.

--- a/cmd/ui/assets/src/assets/css/_layout.scss
+++ b/cmd/ui/assets/src/assets/css/_layout.scss
@@ -210,6 +210,7 @@ a#new::after {
   right: 0;
   top: 4rem;
   z-index: $zindex-app-body;
+  overflow: auto;
 
   .app-assist-toggles {
     position: absolute;
